--- a/src/index.scss
+++ b/src/index.scss
@@ -21,4 +21,5 @@
     --color-pink-low-opacity: rgba(218, 1, 117, 0.35);
     --color-red: #FF4D4D;
     --color-white: #FFF;
+    --color-white-50: #f7f7f7;
 }
