Componente Navbar melhorado; Biblioteca mui/lab instalada; Componente CardHome criado

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -14,20 +14,24 @@
   button {
     all: unset;
     color: var(--color-white);
+    cursor: pointer;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
+    flex-wrap: wrap;
     font-size: 0.875rem;
     font-weight: 700;
     gap: 1.25rem;
     padding: 0.75rem 3rem;
-    cursor: pointer;
     text-decoration: none;
     text-transform: uppercase;
 
     &:hover {
       background-color: var(--color-dark-blue-600);
     }
+  }
+
+  .button__active {
+    background-color: var(--color-dark-blue-600);
   }
 
   .button__addBilling {
