Separando itens do Navbar em um componente; Nova cor adicionada à root; Background color adicionado ao CardHome

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@
     --color-dark-blue-700: #263238;
     --color-gray-50: #E5E5E5;
     --color-gray-500: #4C4C4C;
+    --color-gray-800: #323232;
     --color-green: #4EC06E;
     --color-pink: #DA0175;
     --color-pink-low-opacity: rgba(218, 1, 117, 0.35);
