--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -2,7 +2,8 @@
   background-color: var(--color-dark-blue-700);
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+  max-height: 100%;
   margin-right: auto;
   width: fit-content;
 
