--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -1,4 +1,5 @@
 .content__wrapper {
+  background-color: var(--color-gray-50);
   display: flex;
 
   .main__content {
@@ -17,6 +18,7 @@
     flex-wrap: wrap;
     gap: 2.5rem;
     justify-content: center;
+    margin-bottom: auto;
   }
 
   .item__green {
