--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -12,6 +12,16 @@
     margin-bottom: 3.5rem;
   }
 
+  a {
+    padding: 0.75rem 3rem;
+    text-decoration: none;
+    width: 100%;
+
+    &:hover {
+      background-color: var(--color-dark-blue-600);
+    }
+  }
+
   button {
     all: unset;
     color: var(--color-white);
@@ -20,14 +30,9 @@
     align-items: center;
     font-size: 0.875rem;
     font-weight: 700;
-    gap: 1.25rem;
-    padding: 0.75rem 3rem;
-    text-decoration: none;
+    grid-gap: 1.25rem;
     text-transform: uppercase;
-
-    &:hover {
-      background-color: var(--color-dark-blue-600);
-    }
+    width: 100%;
   }
 
   .button__active {
@@ -41,6 +46,7 @@
     font-weight: 600;
     margin-bottom: 3rem;
     margin-top: auto;
+    padding: 0.75rem 3rem;
     text-transform: none;
     width: fit-content;
 
