--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -44,8 +44,7 @@
     background-color: var(--color-pink);
     border-radius: 20px;
     font-weight: 600;
-    margin-bottom: 3rem;
-    margin-top: auto;
+    margin-top: 5rem;
     padding: 0.75rem 3rem;
     text-transform: none;
     width: fit-content;
