--- a/src/pages/EnrollClient/styles.module.scss
+++ b/src/pages/EnrollClient/styles.module.scss
@@ -18,6 +18,105 @@
       gap: 2.5rem;
       justify-content: center;
       margin-bottom: auto;
+
+      form {
+        background-color: var(--color-white);
+        border-radius: 16px;
+        box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        padding: 2rem 4rem;
+        position: relative;
+    
+        h4 {
+          align-self: flex-start;
+          color: var(--color-dark-blue-600);
+          font-weight: 600;
+          margin: 0 0 0.5rem 0.8rem;
+        }
+        
+        input {
+          color: var(--color-gray-800);
+          font-family: 'Montserrat', sans-serif;
+          font-size: 0.75rem;
+          padding: 0.75rem;
+          min-width: 16rem;
+        }
+        
+        .input__wrapper {
+          display: flex;
+          align-items: center;
+          column-gap: 1rem;
+          row-gap: 2rem;
+          justify-content: center;
+          flex-wrap: wrap;
+        }
+
+        p {
+          font-weight: 400;
+          font-size: 0.75rem;
+          line-height: 1.66;
+          letter-spacing: 0.03333em;
+          text-align: left;
+          margin-top: 3px;
+          color: var(--color-red);
+          font-family: 'Montserrat', sans-serif;
+          margin-bottom: -1.441rem;
+        }
+    
+        .input__error {
+          color: var(--color-red);
+        }
+        
+        .button__wrapper {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+          justify-content: center;
+
+          .button__states {
+            background-color: var(--color-pink);
+            border-radius: 20px;
+            color: var(--color-white);
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 600;
+            padding: 0.6rem 2rem;
+            text-transform: none;
+            transition: none;
+            margin-top: 1rem;
+            width: fit-content;
+      
+            &:hover {
+              background-color: var(--color-white);
+              color: var(--color-pink);
+            }
+        
+            &:disabled {
+              background-color: var(--color-pink-low-opacity);
+              color: var(--color-white-50);
+            }
+          }
+
+          .button__cancel {
+            background-color: var(--color-white);
+            border: 2px solid var(--color-white);
+            color: var(--color-pink);
+            padding: 0.475rem 2rem;
+
+            &:hover {
+              border: 2px solid var(--color-pink);
+            }
+          }
+        }
+    
+        .snackbar {
+          position: absolute;
+          bottom: 0;
+          width: max-content;
+        }
+      }
     }
   }
 }
