Botão cancelar modificado; Try e catch implementados nas páginas de login e cadastro; Nova cor de hover adicionada

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@
     --color-green: #4EC06E;
     --color-pink: #DA0175;
     --color-pink-low-opacity: rgba(218, 1, 117, 0.35);
+    --color-pink-lower-opacity: rgba(218,1,117,.1);
     --color-red: #FF4D4D;
     --color-white: #FFF;
     --color-white-50: #f7f7f7;
