--- a/src/components/EditUserProfile/styles.module.scss
+++ b/src/components/EditUserProfile/styles.module.scss
@@ -85,7 +85,7 @@
       text-transform: none;
       transition: none;
       padding: 0.6rem 3.5rem;
-      margin-top: 1rem;
+      margin: 1rem 0;
 
       &:hover {
         background-color: var(--color-white);
@@ -101,16 +101,7 @@
     .snackbar {
       position: absolute;
       bottom: 0;
-      width: max-content;
-    }
-  }
-
-  footer {
-    font-size: 0.875rem;
-
-    a {
-      text-decoration: underline;
-      color: var(--color-pink);
+      width: 23.5rem;
     }
   }
 }
