Front linkado com o BD da Heroku; Pequenos toques no código

--- a/src/pages/EnrollClient/styles.module.scss
+++ b/src/pages/EnrollClient/styles.module.scss
@@ -85,7 +85,7 @@
             padding: 0.6rem 2rem;
             text-transform: none;
             transition: none;
-            margin-top: 1rem;
+            margin: 1.5rem 0;
             width: fit-content;
       
             &:hover {
