--- a/src/components/EditUserProfile/styles.module.scss
+++ b/src/components/EditUserProfile/styles.module.scss
@@ -3,6 +3,7 @@
   align-items: center;
   flex-direction: column;
   gap: 1rem;
+  height: 100%;
   justify-content: center;
 
   form {
@@ -15,9 +16,12 @@
     gap: 1rem;
     padding: 1.5rem 3rem 3rem 3rem;
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     > img {
       position: absolute;
+
       top: 1rem;
       right: 1rem;
 
@@ -43,15 +47,16 @@
     }
 
     p {
-      font-weight: 400;
-      font-size: 0.75rem;
-      line-height: 1.66;
-      letter-spacing: 0.03333em;
-      text-align: left;
-      margin-top: 3px;
       color: var(--color-red);
       font-family: 'Montserrat', sans-serif;
+      font-size: 0.75rem;
+      font-weight: 400;
+      letter-spacing: 0.03333em;
+      line-height: 1.66;
+      margin-top: 3px;
       margin-bottom: -1.441rem;
+      max-width: 17.5rem;
+      text-align: center;
     }
 
     .input__error {
@@ -60,8 +65,6 @@
 
     .input__warning {
       color: var(--color-blue);
-      text-align: center;
-      max-width: 17rem;
     }
 
     .password__input {
