--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,21 @@
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-pink) var(--color-pink-low-opacity);
+
+    &::-webkit-scrollbar {
+        width: 0.5rem;
+    }
+    
+    &::-webkit-scrollbar-track {
+        background: var(--color-pink-low-opacity);
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--color-pink);
+        border-radius: 0.5rem;
+    }
 
     body {
         background-color: var(--color-grey-50);
