--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,7 @@
 
 :root {
     --color-black: #000;
+    --color-light-blue: #9DBBC3;
     --color-blue: #5197B5;
     --color-dark-blue-600: #374952;
     --color-dark-blue-700: #263238;
