--- a/src/components/EditUserProfile/styles.module.scss
+++ b/src/components/EditUserProfile/styles.module.scss
@@ -102,8 +102,8 @@
     }
 
     .snackbar {
-      position: absolute;
-      bottom: 0;
+      margin-top: auto;
+      margin-bottom: -0.5rem;
       width: 23.5rem;
     }
   }
