--- a/src/pages/ListClient/styles.module.scss
+++ b/src/pages/ListClient/styles.module.scss
@@ -46,9 +46,9 @@
         align-items: center;
         font-size: 0.875rem;
         font-weight: 600;
-        column-gap: 3.75rem;
+        gap: 1rem;
         justify-content: space-between;
-        padding: 0.375rem 1.5rem;
+        padding: 0.375rem 3.5rem 0.375rem 1.5rem;
         text-align: center;
         width: 100%;
 
@@ -56,15 +56,24 @@
           display: flex;
           justify-self: flex-start;
           text-align: left;
+          width: 30%;
         }
 
         .table__others {
           display: flex;
           align-items: center;
-          gap: 3.75rem;
-          justify-content: space-evenly;
+          gap: 2rem;
+          justify-content: center;
           justify-self: center;
-          width: 32rem;
+          width: 63%;
+
+          > div {
+            width: 33%;
+          }
+        }
+
+        .blank__space {
+          width: 7%;
         }
       }
     }
