--- a/src/pages/Billing/styles.module.scss
+++ b/src/pages/Billing/styles.module.scss
@@ -13,12 +13,40 @@
 
     .content {
       display: flex;
-      align-items: flex-start;
-      flex-wrap: wrap;
-      gap: 2.5rem;
-      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 1rem;
+      height: 100%;
+      margin-top: 4rem;
       margin-bottom: auto;
-      font-size: 1.125rem;
+      width: 100%;
+
+      .table__title {
+        background-color: var(--color-light-blue);
+        border-radius: 0.5rem;
+        color: var(--color-white);
+        display: flex;
+        align-items: center;
+        font-size: 0.875rem;
+        font-weight: 600;
+        gap: 1rem;
+        justify-content: space-between;
+        padding: 0.375rem 3.5rem 0.375rem 1.5rem;
+        text-align: center;
+        width: 100%;
+
+        > div {
+          width: 20%;
+        }
+      
+        .info__id {
+          width: 5%;
+        }
+      
+        .info__description {
+          width: 40%;
+        }
+      }
     }
   }
 }
