Toques na estilização; arrumando dependências do useEffect

--- a/src/components/CardClient/styles.module.scss
+++ b/src/components/CardClient/styles.module.scss
@@ -39,8 +39,10 @@
       width: 100%;
 
       > div {
+        background-color: var(--color-white);
         overflow: hidden;
         text-overflow: ellipsis;
+        z-index: 1;
   
         &:hover {
           overflow: visible;
