--- a/src/components/CardDetailBill/styles.module.scss
+++ b/src/components/CardDetailBill/styles.module.scss
@@ -12,6 +12,7 @@
   .inline__info {
     display: flex;
     align-items: center;
+    gap: 1rem;
     justify-content: space-between;
     width: 100%;
     
