--- a/src/components/ModalDetailsClient/styles.module.scss
+++ b/src/components/ModalDetailsClient/styles.module.scss
@@ -75,6 +75,9 @@
           > div {
             display: flex;
             gap: 0.5rem;
+          }
+          
+          .info__email {
             width: 50%;
           }
         }
@@ -106,7 +109,7 @@
         display: flex;
         flex-direction: column;
         gap: 2rem;
-        max-height: 16rem;
+        max-height: 18rem;
         overflow-y: auto;
         overflow-x: hidden;
         padding: 0 1.75rem;
