Página EnrollBill finalizada; Toques na estilização

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,6 +31,7 @@
     --color-dark-blue-600: #374952;
     --color-dark-blue-700: #263238;
     --color-gray-50: #E5E5E5;
+    --color-gray-300: #868686;
     --color-gray-500: #4C4C4C;
     --color-gray-800: #323232;
     --color-green: #4EC06E;
