--- a/src/components/ModalDetailsClient/styles.module.scss
+++ b/src/components/ModalDetailsClient/styles.module.scss
@@ -114,6 +114,15 @@
         overflow-x: hidden;
         padding: 0 1.75rem;
       }
+
+      .no__bills {
+        background-color: var(--color-white-100);
+        border-radius: 8px;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+        display: flex;
+        font-size: 0.875rem;
+        padding: 1.25rem;
+      }
     }
   }
 }
