--- a/src/pages/Billing/styles.module.scss
+++ b/src/pages/Billing/styles.module.scss
@@ -7,6 +7,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 2.5rem;
+    height: 100%;
     justify-content: center;
     padding: 2.5rem;
     width: 100%;
