--- a/src/components/CardBill/styles.module.scss
+++ b/src/components/CardBill/styles.module.scss
@@ -17,26 +17,32 @@
 
   .info__id {
     font-weight: 700;
+    text-align: center;
     width: 5%;
   }
 
   .info__name {
     overflow: hidden;
+    text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
 
     &:hover {
       overflow: visible;
+      white-space: pre-line;
     }
   }
 
   .info__description {
     overflow: hidden;
+    text-align: left;
     text-overflow: ellipsis;
+    white-space: nowrap;
     width: 40%;
 
     &:hover {
       overflow: visible;
+      white-space: pre-line;
     }
   }
 
