--- a/src/pages/EnrollUser/styles.module.scss
+++ b/src/pages/EnrollUser/styles.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   padding: 2rem;
 
@@ -66,6 +66,7 @@
       background-color: var(--color-pink);
       border-radius: 20px;
       color: var(--color-white);
+      white-space: nowrap;
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       text-transform: none;
@@ -106,6 +107,14 @@
     form {
       gap: 1rem;
       padding: 2.5rem;
+
+      input {
+        width: 15rem;
+      }
+
+      .password__input {
+        width: 16.55rem;
+      }
     }
 
     footer {
