--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   padding: 2rem;
 
@@ -106,6 +106,14 @@
     form {
       gap: 1rem;
       padding: 2.5rem;
+
+      input {
+        width: 15rem;
+      }
+
+      .password__input {
+        width: 16.55rem;
+      }
     }
 
     footer {
