--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -2,9 +2,9 @@
   background-color: var(--color-dark-blue-700);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  max-height: 100%;
+  height: 100vh;
   margin-right: auto;
+  position: fixed;
   width: fit-content;
 
   > img {
