--- a/src/pages/Billing/styles.module.scss
+++ b/src/pages/Billing/styles.module.scss
@@ -10,6 +10,7 @@
     height: 100%;
     justify-content: center;
     padding: 2.5rem;
+    margin-left: 14.66rem;
     width: 100%;
 
     .content {
