--- a/src/pages/Billing/styles.module.scss
+++ b/src/pages/Billing/styles.module.scss
@@ -1,16 +1,18 @@
 .content__wrapper {
   background-color: var(--color-gray-50);
   display: flex;
+  min-height: 100vh;
+  max-height: 100%;
 
   .main__content {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 2.5rem;
-    height: 100%;
     justify-content: center;
-    padding: 2.5rem;
     margin-left: 14.66rem;
+    padding: 2.5rem;
+    position: relative;
     width: 100%;
 
     .content {
@@ -55,6 +57,12 @@
           width: 40%;
         }
       }
+    }
+
+    .snackbar {
+      position: absolute;
+      top: 1rem;
+      width: max-content;
     }
   }
 }
