--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -10,8 +10,9 @@
     flex-wrap: wrap;
     gap: 2.5rem;
     justify-content: center;
-    padding: 2.5rem;
     margin-left: 14.66rem;
+    padding: 2.5rem;
+    position: relative;
     width: 100%;
   }
 
@@ -37,5 +38,17 @@
   .item__blue {
     border: 2px solid var(--color-blue);
     color: var(--color-blue);
+  }
+
+  .snackbar {
+    position: absolute;
+    bottom: 1rem;
+    width: max-content;
+  }
+
+  @media only screen and (max-width: 1124px) {
+    .snackbar {
+      top: 0;
+    }
   }
 }
