--- a/src/pages/ListClient/styles.module.scss
+++ b/src/pages/ListClient/styles.module.scss
@@ -6,12 +6,13 @@
 
   .main__content {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     gap: 1rem;
     justify-content: center;
-    padding: 2.5rem;
     margin-left: 14.66rem;
+    padding: 2.5rem;
+    position: relative;
     width: 100%;
 
     .content {
@@ -79,6 +80,12 @@
           width: 7%;
         }
       }
+    }
+
+    .snackbar {
+      position: absolute;
+      top: 1rem;
+      width: max-content;
     }
   }
 }
