--- a/src/pages/Billing/styles.module.scss
+++ b/src/pages/Billing/styles.module.scss
@@ -21,9 +21,54 @@
       flex-direction: column;
       gap: 1rem;
       height: 100%;
-      margin-top: 4rem;
       margin-bottom: auto;
       width: 100%;
+
+      .search__wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        padding: 1.55rem 0 3rem 0;
+        width: 100%;
+
+        form {
+          position: relative;
+
+          input {
+            color: var(--color-gray-800);
+            font-family: 'Montserrat', sans-serif;
+            font-size: 0.75rem;
+            padding: 0.75rem 1rem;
+            width: 27rem;
+          }
+
+          .search__button {
+            background-color: var(--color-dark-blue-600);
+            border-radius: 4px;
+            color: var(--color-white);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            font-size: 0.75rem;
+            font-weight: 700;
+            gap: 0.5rem;
+            padding: 0.63rem 1.5rem;
+            text-transform: uppercase;
+            transition: ease-in 0.4s;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: fit-content;
+    
+            &:hover {
+              border-color: var(--color-pink);
+              box-shadow: 
+                inset -4rem 0 0 0 var(--color-pink),
+                inset 4rem 0 0 0 var(--color-pink);
+            }
+          }
+        }
+      }
 
       .table__title {
         background-color: var(--color-light-blue);
@@ -49,7 +94,18 @@
         }
         
         .info__name {
+          cursor: pointer;
+          display: flex;
+          align-items: center;
           text-align: start;
+
+          > img {
+            padding: 0 0.3rem;
+          }
+
+          .sortArrowUp {
+            transform: rotate(180deg);
+          }
         }
 
         .info__description {
