--- a/src/pages/ListClient/styles.module.scss
+++ b/src/pages/ListClient/styles.module.scss
@@ -24,21 +24,65 @@
       margin-bottom: auto;
       width: 100%;
 
-      .button__client {
-        align-self: flex-start;
-        background-color: var(--color-gray-50);
-        border: 2px solid var(--color-pink);
-        border-radius: 20px;
-        color: var(--color-pink);
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 600;
-        margin-bottom: 1.8rem;
-        padding: 0.475rem 2rem;
-        text-transform: none;
-        transition: none;
-  
-        &:hover {
-          background-color: var(--color-pink-lower-opacity);
+      .search__wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 3rem 0;
+        width: 100%;
+
+        .button__client {
+          background-color: var(--color-gray-50);
+          border: 2px solid var(--color-pink);
+          border-radius: 20px;
+          color: var(--color-pink);
+          font-family: 'Montserrat', sans-serif;
+          font-weight: 600;
+          padding: 0.475rem 2rem;
+          text-transform: none;
+          transition: none;
+    
+          &:hover {
+            background-color: var(--color-pink-lower-opacity);
+          }
+        }
+        
+        form {
+          position: relative;
+
+          input {
+            color: var(--color-gray-800);
+            font-family: 'Montserrat', sans-serif;
+            font-size: 0.75rem;
+            padding: 0.75rem 1rem;
+            width: 27rem;
+          }
+
+          .search__button {
+            background-color: var(--color-dark-blue-600);
+            border-radius: 4px;
+            color: var(--color-white);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            font-size: 0.75rem;
+            font-weight: 700;
+            gap: 0.5rem;
+            padding: 0.63rem 1.5rem;
+            text-transform: uppercase;
+            transition: ease-in 0.4s;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: fit-content;
+    
+            &:hover {
+              border-color: var(--color-pink);
+              box-shadow: 
+                inset -4rem 0 0 0 var(--color-pink),
+                inset 4rem 0 0 0 var(--color-pink);
+            }
+          }
         }
       }
 
@@ -57,10 +101,19 @@
         width: 100%;
 
         .table__client {
+          cursor: pointer;
           display: flex;
           justify-self: flex-start;
           text-align: left;
           width: 30%;
+
+          > img {
+            padding: 0 0.3rem;
+          }
+
+          .sortArrowUp {
+            transform: rotate(180deg);
+          }
         }
 
         .table__others {
@@ -79,6 +132,15 @@
         .blank__space {
           width: 7%;
         }
+      }
+
+      .cardNoResult {
+        background-color: var(--color-white-200);
+        border-radius: 8px;
+        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+        display: flex;
+        font-size: 0.875rem;
+        padding: 1.25rem;
       }
     }
 
