Solução da alteração da ordenação ao clicar no menu usando pointer-events: none; no CSS da Navbar para o menu ativo

--- a/src/components/Navbar/styles.module.scss
+++ b/src/components/Navbar/styles.module.scss
@@ -37,6 +37,7 @@
 
   .button__active {
     background-color: var(--color-dark-blue-600);
+    pointer-events: none;
   }
 
   .button__addBilling {
